# Open-Source-MLOps-with-DVC-and-CML

./: .dockerignore  .envrc  .gitignore  Dockerfile  Makefile  README.md  api.py  concatenate.py  dvc.yaml  dvc_file_system.py  dvc_get_url.py  dvc_open.py  evaluate.py  install_requirements.sh  params.yaml  predict.py  process_data.py  pyproject.toml  requirements.txt  review_lengths.py  train_sklearn.py  unpinned_requirements.txt
.dvc/: config
.dvc/plots/: bar_horizontal.json  bar_horizontal_sorted.json  confusion.json  confusion_normalized.json  histogram.json  smooth.json
ch02/: ch02_00_create_a_virtual_environment.sh  ch02_01_adding_files_to_dvc.sh  ch02_02_tracking_changes_to_data.sh
ch03/: ch03_00_setup_aws_cli.sh  ch03_01_creating_an_s3_bucket.sh  ch03_02_using_dvc_with_a_remote_cache.sh  ch03_03_recovering_data_after_changes.sh
ch04/: ch04_00_create_data_registry.sh
ch06/: ch06_00_quickly_building_dvc_pipelines.sh  train_sklearn.py
ch1/: 00_create_a_virtual_environment.sh  01_adding_files_to_dvc.sh  02_tracking_changes_to_data.sh
ch2/: 00_create_a_virtual_environment.sh  00_setup_aws_cli.sh  01_creating_an_s3_bucket.sh  02_using_dvc_with_a_remote_cache.sh  03_recovering_data_after_changes.sh
ch3/: 00_create_data_registry.sh  00_setup_aws_cli.sh  02_importing_data_with_dvc_import.sh  02_using_dvc_with_a_remote_cache.sh  03_updating_the_registry.sh  04_updating_the_data_in_our_project.sh
ch4/: 01_fetching_data_with_dvc_get.sh
ch5/: 00_precommit_install_dvc.sh
data/: .gitignore  IMDB_movie_ratings_sentiment.csv.dvc
results/: .gitignore
(+2 files in other folders)
