[tool.poetry]
name = "open-source-mlops-with-dvc-and-cml"
version = "0.1.0"
description = ""
authors = ["Matt Upson <matt@mantisnlp.com>"]
readme = "README.md"
packages = [{include = "open_source_mlops_with_dvc_and_cml"}]

[tool.poetry.dependencies]
python = "~3.8"
dvc = "^2.45.1"
scikit-learn = "^1.2.1"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
